--- a/curve_fever_common/Cargo.toml
+++ b/curve_fever_common/Cargo.toml
@@ -9,4 +9,5 @@ edition = "2018"
 serde = { version = "1.0.124", features = ["derive"] }
 serde_derive = "1.0.124"
 uuid = { version = "0.8", features = ["serde", "v4"] }
+rand = "0.8"
 arrayvec = { version = "0.7", features = ["serde"] }
