--- a/curve_fever_server/Cargo.toml
+++ b/curve_fever_server/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 
 
 [dependencies]
+arrayvec = { version = "0.7", features = ["serde"] }
 anyhow = "1.0"
 num_cpus = "1.13"
 rand = "0.8"
