--- a/curve_fever_client/Cargo.toml
+++ b/curve_fever_client/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 crate-type = ["cdylib"]
 
 [dependencies]
+arrayvec = { version = "0.7", features = ["serde"] }
 wasm-bindgen = "^0.2"
 js-sys = "^0.3"
 lazy_static = "^1.4"
